css update to prevent content and header overlap

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1,6 +1,16 @@
 body {
-	margin-top: 60px;
-}
+    padding-top: 100px;
+  }
+@media (min-width: 1200px) {
+    body {
+      padding-top: 60px;
+    }
+  }
+@media (max-width: 767px) {
+    body {
+      padding-top: 60px;
+    }
+  }
 
 li.list-recommedation {
 	 list-style-type: none;
